[gd_scene load_steps=5 format=3 uid="uid://o0642xqoyj16"]

[ext_resource type="Script" path="res://scenes/card/card.gd" id="1_7xc0o"]
[ext_resource type="Texture2D" uid="uid://cquawarjqw2lw" path="res://images/card/card_frame.png" id="1_grtwt"]

[sub_resource type="LabelSettings" id="LabelSettings_5cdqt"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27t2f"]
size = Vector2(566, 797)

[node name="Card" type="Node2D"]
script = ExtResource("1_7xc0o")

[node name="CardFrame" type="Sprite2D" parent="."]
texture = ExtResource("1_grtwt")

[node name="CardNameLabel" type="Label" parent="."]
offset_left = -240.0
offset_top = -354.0
offset_right = 103.0
offset_bottom = -320.0
text = "CardName"
label_settings = SubResource("LabelSettings_5cdqt")

[node name="CardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_27t2f")

[connection signal="mouse_entered" from="CardArea" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_card_area_mouse_exited"]
